feat(external-file-support) now the repository works with a file located at the direcotry {user.home}/data/caps.txt